--- a/plugin.yml
+++ b/plugin.yml
@@ -5,3 +5,6 @@ author: timvisee
 website: http://timvisee.com/
 softdepend: [Vault, zPermissions] #hack to fix trove errors
 commands:
+   manager:
+      description: This is a demo command.
+      usage: /manager node [permissionnode] or /manager groups
