--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -3,7 +3,7 @@ main: com.timvisee.manager.Manager
 version: 0.1
 author: timvisee
 website: http://timvisee.com/
-softdepend: [Vault, zPermissions] #hack to fix trove errors
+softdepend: [Vault, zPermissions, Essentials] #hack to fix trove errors
 commands:
    manager:
       description: The testing commands for the manager plugin.
